rbx/rbx-frontend-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbx-frontend-prod-deploy
spec:
  selector:
    matchLabels:
      app: rbx-frontend-prod-deploy
  template:
    metadata:
      labels:
        app: rbx-frontend-prod-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: rbx-frontend-prod-deploy
        image: ldamasio/rbx-frontend-prod:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "1000Mi"
            cpu: "750m"
          limits:
            memory: "1000Mi"
            cpu: "1500m"
