rbx/rbx-backend-api-gateway-django-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-backend-api-gateway-django-prod-svc
spec:
  selector:
    app: rbx-backend-api-gateway-django-prod-svc
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
