rbx/rbx-backend-api-gateway-nginx-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-backend-api-gateway-nginx-prod-svc
spec:
  selector:
    app: rbx-backend-api-gateway-nginx-prod-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
