rbx/rbx-backend-api-gateway-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbx-backend-api-gateway-ing
  annotations:
    cert-manager.io/cluster-issuer: "rbx-backend-api-gateway-prod-clusterissuer"
    spec.ingressClassName: "public"
spec:
  tls:
  - hosts:
    - api-gateway.rbxrobotica.com.br
    secretName: rbx-backend-api-gateway-prod-secret
  rules:
  - host: api-gateway.rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbx-backend-api-gateway-django-prod-svc
            port:
              number: 8000
      - pathType: Prefix
        path: "/static"
        backend:
          service:
            name: rbx-backend-api-gateway-nginx-prod-svc
            port:
              number: 80
