rbx/rbx-frontend-homolog-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbx-frontend-prod-ing
  annotations:
    cert-manager.io/cluster-issuer: "rbx-frontend-homolog-clusterissuer"
spec:
  ingressClassName: "public"
  tls:
    - hosts:
        - homolog.rbxrobotica.com.br
      secretName: rbx-frontend-prod-secret
  rules:
    - host: homolog.rbxrobotica.com.br
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rbx-frontend-prod-svc
                port:
                  number: 3000
