rbx/rbx-frontend-prod-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbx-frontend-prod-ing
  annotations:
    cert-manager.io/cluster-issuer: "rbx-frontend-prod-clusterissuer"
    spec.ingressClassName: "public"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: "public"
  tls:
    - hosts:
      - rbxrobotica.com.br
    - hosts:
      - www.rbxrobotica.com.br
      secretName: rbx-frontend-prod-secret
  rules:
  - host: www.rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbx-frontend-prod-svc
            port:
              number: 3000
